feat: patient survey result page connection